# MOMENTO

./: .gitignore  README.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/(auth)/login/: page.tsx
client/app/(auth)/register/: page.tsx
client/app/(main)/admin/: page.tsx
client/app/(main)/apply/: page.tsx
client/components/map/: LocationMarker.tsx  LocationPanel.tsx  MomentoMap.tsx
client/components/ui/: NavBar.tsx
client/hooks/: useAuth.ts  useWebSocket.ts
client/lib/: api.ts
client/src/types/: index.ts
client/types/: index.ts
docs/: api.md  architecture.md  data-model.md  roadmap.md  scoring.md  stack-decisions.md
server/: .env.example  Dockerfile  pyproject.toml  railway.toml
server/alembic/: .keep  env.py
server/alembic/versions/: 1588d3410ca0_initial_tables.py
server/app/: main.py  worker.py
server/app/db/: seed.py  session.py
server/app/models/: __init__.py  availability_pattern.py  availability_score.py  crowd_report.py  location.py  saved_location.py  user.py
server/app/routers/: applications.py  auth.py  availability.py  locations.py  reports.py  users.py
server/app/schema/: availability_pattern.py  availability_score.py  crowd_report.py  location.py  saved_location.py  user.py
server/app/schemas/: availability_pattern.py  crowd_report.py  location.py  user.py
server/app/services/: auth.py  availability_pattern.py  availability_score.py  crowd_report.py  location.py  saved_location.py  scoring.py  user.py  websocket.py
server/app/tasks/: pattern_update.py
(+3 files in other folders)
