[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Poniente",email = "michaelwrites.biz@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "geoalchemy2 (>=0.20.0,<0.21.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.30,<0.0.31)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
